--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-wikipedia
-transformers
-sentence_transformers
-spacy_universal_sentence_encoder
-tensorflow_text
-numpy
-pandas
+python >=3.7
+wikipedia===1.4.0
+transformers===4.17.0
+sentence_transformers===2.2.0
+spacy===3.2.3
+spacy_universal_sentence_encoder===0.4.3
+tensorflow_text===2.8.1
+numpy===1.20.3
+pandas===1.3.3
+
+# installing necessary module
+# python -m spacy download fr_core_news_lg
